// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controllerMiddleware should set and keep references 1`] = `
Test {
  "agent": undefined,
  "cache": undefined,
  "handler": Object {
    "data": "new-data",
  },
  "issuer": undefined,
  "keystore": undefined,
  "logger": undefined,
  "metadata": undefined,
  "metrics": undefined,
  "repository": undefined,
  "token": undefined,
}
`;

exports[`controllerMiddleware should set controller on context 1`] = `
Test {
  "agent": undefined,
  "cache": undefined,
  "handler": Object {
    "data": "data",
  },
  "issuer": undefined,
  "keystore": undefined,
  "logger": undefined,
  "metadata": undefined,
  "metrics": undefined,
  "repository": undefined,
  "token": undefined,
}
`;

exports[`controllerMiddleware should set controller with specific key 1`] = `
Test {
  "agent": undefined,
  "cache": undefined,
  "handler": Object {
    "data": "data",
  },
  "issuer": undefined,
  "keystore": undefined,
  "logger": undefined,
  "metadata": undefined,
  "metrics": undefined,
  "repository": undefined,
  "token": undefined,
}
`;
